--- a/templates/add-missing-person.html
+++ b/templates/add-missing-person.html
@@ -77,9 +77,11 @@
           <label for="contact">Phone</label>
           <input type="number" id="contact" name="phone" required />
         </div>
-        <div class="form-group col-md-3">
-          <label for="inputforbdate">Birth Date</label>
-          <input type="date" id="inputforbdate" name="bdate" required />
+        <div class="form-row">
+          <div class="form-group col-md-3">
+            <label for="inputforbdate">Birth Date</label>
+            <input type="date" id="inputforbdate" name="bdate" required />
+          </div>
         </div>
       </div>
       <div class="form-row"></div>
