--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,9 @@
 
         <ul class="list-unstyled components">
           <li class="active">
-            <a href="#"><i class="bx bx-user-voice"></i> Announcement</a>
+            <a href="{% url 'announcementv' %}"
+              ><i class="bx bx-user-voice"></i> Announcement</a
+            >
           </li>
           <li class="active">
             <a
