--- a/templates/announcement.html
+++ b/templates/announcement.html
@@ -21,7 +21,7 @@
       </a>
       {% endfor %} {% else %}
       <div>
-        <h2>No person in the list</h2>
+        <h2>No announcements for you</h2>
       </div>
       {% endif %}
     </div>
