--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,9 @@
             >
           </li>
           <li>
-            <a href="#"><i class="bx bx-message-square-dots"></i> Forum</a>
+            <a href="{% url 'forumView' %}"
+              ><i class="bx bx-message-square-dots"></i> Forum</a
+            >
           </li>
           <!-- Dropdown menu 
           <li>
