--- a/templates/wanted-person.html
+++ b/templates/wanted-person.html
@@ -7,7 +7,7 @@
     <div>
       {% for person in wantedPersons %}
       <div class="col-md-3 person">
-        <a href="">
+        <a href="{% url 'personDetView' id=person.id %}">
           <div class="card" style="width: 18rem">
             <img
               class="card-img-top"
