wanted person update

--- a/templates/notice-det.html
+++ b/templates/notice-det.html
@@ -18,6 +18,7 @@
     <br />
     <h6>By order of</h6>
     <p class="card-text">{{ file.authority|capfirst }}</p>
+    <p class="card-text">{{ file.date | date }}</p>
 
     <br />
     <br />
