--- a/templates/wanted-person-det.html
+++ b/templates/wanted-person-det.html
@@ -3,27 +3,39 @@
 {% endblock %} {% block main %}
 <div class="card m-5">
   <h5 class="text-center card-header text-light bg-secondary">
-    {{ file.status|capfirst }}
+    {{ person.status|capfirst }}
   </h5>
   <div class="card-body m-4">
     <br />
-    <h5 class="card-title">{{ file.title|capfirst }}</h5>
+    <div class="row">
+      <div class="col-md-6">
+        <h5 class="card-title">{{ person.name|capfirst }}</h5>
+      </div>
+      <div class="col-md-6"><img src="{{ person.photo.url }}" alt="" /></div>
+    </div>
+
     <br />
     <hr />
     <br />
-    <h6>Victim:</h6>
-    <p class="card-text">{{ file.victim|capfirst }}</p>
+    <h6>Reason:</h6>
+    <p class="card-text">{{ person.reason|capfirst }}</p>
     <br />
     <hr />
     <br />
-    <h6>Suspects:</h6>
-    <p class="card-text">{{ file.criminal|capfirst }}</p>
+    <h6>Address:</h6>
+    <p class="card-text">{{ person.address|capfirst }}</p>
+
+    <br />
+    <hr />
+    <br />
+    <h6>Fathers name:</h6>
+    <p class="card-text">{{ person.fathersName|capfirst }}</p>
 
     <br />
     <br />
     <hr />
     <br />
-    <p class="card-text">{{ file.description|capfirst }}</p>
+    <p class="card-text">{{ person.address|capfirst }}</p>
 
     <br />
 
