--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,7 +27,7 @@
                   {%endif%}
                 </div>
 
-                <form method="post">
+                <form method="post" enctype="multipart/form-data">
                   {% csrf_token %}
                   <div class="form-row">
                     <div class="form-group col-md-4">
@@ -147,6 +147,15 @@
                     <div class="form-group col-md-2">
                       <label for="inputZip">Zip</label>
                       <input type="number" class="form-control" id="inputZip" />
+                    </div>
+                    <div class="form-group col-md-2">
+                      <label for="inputZip">Profile Photo</label>
+                      <input
+                        type="file"
+                        id="photo"
+                        name="photo"
+                        accept="image/*"
+                      />
                     </div>
                   </div>
 
