--- a/templates/add-missing-person.html
+++ b/templates/add-missing-person.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'css/post-report/style.css' %}" />
 {% endblock %} {% block main %}
 <div class="page-title">
-  <h2>Submit a Report</h2>
+  <h2>Fill up missing person details</h2>
 </div>
 <div class="submission-form row">
   <div class="col-md-10">
